Fix bio overflow

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ ul li:not(:last-child) {
 .bio li {
   width: 375px;
   font-weight: 500;
+  max-width: calc(100vw - 21px);
 }
 
 .project-link-container {
